# iris-copilot

./: .gitignore  AZURE_AD_INTEGRATION.md  CLEAN_ARCHITECTURE_DDD.md  COPILOT_INTEGRATION_CHECKLIST.md  DDD_ARCHITECTURE_GUIDE.md  Dockerfile  LOCAL_SETUP.md  MICROSOFT_COPILOT_INTEGRATION_PLAN.md  PROJECT_ASSESSMENT_REPORT.md  README.md  TESTING_GUIDE.md  UPGRADE_PLAN.md  UPGRADE_PROGRESS.md  USER_MODELS_README.md  build-images.sh  docker-compose.yml  env.example  git_push_local.sh  migrate_db.py  pyproject.toml  pytest.ini  requirements.prod.txt  requirements.txt
.copilot/: actions.yml
app/: __init__.py  main.py  wiring.py
app/adapters/: azure_ad_adapter.py  calendar_adapter.py  frontend_adapter.py  openai_adapter.py  teams_adapter.py  telegram_adapter.py
app/api/v1/: __init__.py  dependencies.py
app/api/v1/routers/: auth.py  azure_ad.py  calendar.py  chat.py  copilot.py  teams.py  upload.py
app/api/v1/schemas/: auth.py
app/application/calendar/: __init__.py
app/application/calendar/use_cases/: __init__.py  calendar_use_cases.py
app/application/chat/use_cases/: process_chat_query.py
app/application/teams/: __init__.py
app/application/teams/use_cases/: __init__.py  teams_use_cases.py
app/application/user/use_cases/: azure_ad_login.py  login.py  login_with_aggregate.py  register.py  register_with_aggregate.py
app/core/: config.py  logger.py
app/domain/analytics/: repository.py
app/domain/chat/: repository.py
app/domain/chat/entities/: __init__.py  chat_message.py  chat_session.py  value_objects.py
app/domain/document/: repository.py
app/domain/embedding/: repository.py
app/domain/generation/: repository.py
app/domain/user/: repository.py
app/domain/versioning/: repository.py
app/infrastructure/db/: base.py  session.py
app/services/: cache_service.py  embedding_service.py  llm_service.py  monitoring_service.py  password_service.py  search_service.py  token_service.py
copilot-commands/: README.md  teams-commands.ps1  teams-commands.py  teams-commands.sh
copilot-extension/: package.json
copilot-plugin/: DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOMAIN_SETUP.md  Dockerfile  agent_handler.py  agent_openapi.json  deploy_to_cloud.py  docker-compose.yml  env.example  env.local  env.production  manifest.json  oauth2_handler.py  openapi.json  package_plugin.py  plugin.json  plugin_handler.py  requirements.txt  server.py
tests/: conftest.py
tests/e2e/: __init__.py
(+24 files in other folders)
